feat: implement api send mail and fix minor bug
